--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio d'apprentissage</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,8 +12,7 @@
         <section class="infos mb-5">
             <div class="d-flex flex-column align-items-center mb-4">
                 <div class="photo-profil mb-3">
-                    <!-- Remplacez le src par votre photo si besoin -->
-                    <img src="https://via.placeholder.com/120x120.png?text=Photo" alt="Photo de profil" class="img-profil">
+                    <img src="../Image/photo.jpg" alt="Photo de profil" class="img-profil">
                 </div>
                 <h1 class="text-center text-light">Informations personnelles</h1>
             </div>
@@ -67,5 +65,10 @@
             </ul>
         </section>
     </div>
+        <div class="text-center mt-4">
+            <button class="btn btn-info" onclick="afficherMessage()">Afficher un message</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
