--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="infos mb-5">
             <div class="d-flex flex-column align-items-center mb-4">
                 <div class="photo-profil mb-3">
-                    <img src="../Image/photo.jpg" alt="Photo de profil" class="img-profil">
+                    <img src="Image/photo.jpg" alt="Photo de profil" class="img-profil">
                 </div>
                 <h1 class="text-center text-light">Informations personnelles</h1>
             </div>
